--- a/Develop/index.html
+++ b/Develop/index.html
@@ -3,20 +3,14 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Horiseon</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>website</title>
 </head>
 
 <body>
-    <!-- Navigation -->
+    <!-- navigation -->
     <header>
-        <h1>
-            <a href="/">
-                Hori<span class="seo">seo</span>n
-            </a>
-        </h1>
-        <nav>
+        <h1>Hori<span class="seo">seo</span>n</h1>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -28,31 +22,31 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </nav>
     </header>
 
-    <!-- Hero/Jumbotron -->
+    <!-- hero/jumbotron -->
     <section class="hero"></section>
-        
+
+    <!-- main content section -->
     <section class="content">
-        <!-- Search Engine Optimation Section -->
-        <div class="search-engine-optimization">
+        <!-- seach engine optimization -->
+        <div id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <!-- Online Reputation Management Section -->
-        <div id="online-reputation-management" class="online-reputation-management">
+        <!-- online reputation management -->
+        <div id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <!-- Social Media Marketing Section -->
-        <div id="social-media-marketing" class="social-media-marketing">
+        <!-- social media marketing -->
+        <div id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -60,23 +54,27 @@
             </p>
         </div>
     </section>
-    <!-- Benefits Section -->
+
+    <!-- benefits section -->
     <section class="benefits">
-        <div class="benefit-lead">
+        <!-- lead generation -->
+        <div>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <!-- brand awareness -->
+        <div>
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <!-- cost management -->
+        <div>
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
@@ -85,7 +83,7 @@
         </div>
     </section>
 
-    <!-- Footer -->
+    <!-- footer -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
