review and add comments

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -16,7 +16,7 @@
                 Hori<span class="seo">seo</span>n
             </a>
         </h1>
-            <!-- navigation options-->
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -28,6 +28,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
+        </nav>
     </header>
 
     <!-- hero/jumbotron -->
